fix phone ul text shift in multiline

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ div > h2 {
 
 ul {
   padding-left: 20px;
+  text-align: left;
 }
 
 ul.square {
